# SyHa_LV1_project3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
src/extract/: generator.py  parallel.py
src/load/: loader.py
src/transform/: cleaner.py
